[gd_scene load_steps=21 format=2]

[ext_resource path="res://Asset/Enemies/Bat.png" type="Texture" id=1]
[ext_resource path="res://Asset/Shadows/SmallShadow.png" type="Texture" id=2]
[ext_resource path="res://src/Overlap/HurtBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Enemies/Bat.gd" type="Script" id=4]
[ext_resource path="res://src/Enemies/Stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/Enemies/PlayerDetection.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/Overlap/HitBox.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/Overlap/SoftCollision.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/Enemies/WanderController.tscn" type="PackedScene" id=9]





[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 16, 24 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 9.0
} ]

[sub_resource type="CircleShape2D" id=7]
radius = 4.6653

[sub_resource type="CapsuleShape2D" id=8]
radius = 7.89112
height = 3.52296

[sub_resource type="CircleShape2D" id=9]
radius = 64.4679

[sub_resource type="CapsuleShape2D" id=10]
radius = 7.91924

[sub_resource type="CircleShape2D" id=11]
radius = 5.5638

[node name="Bat" type="KinematicBody2D"]
pause_mode = 1
collision_layer = 16
collision_mask = 2147483649
script = ExtResource( 4 )

[node name="BatAnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )
frame = 3
playing = true
offset = Vector2( 0, -12 )

[node name="ShadowSprite" type="Sprite" parent="."]
position = Vector2( 0.144237, 0.161911 )
scale = Vector2( 1.20474, 1.1378 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 7 )

[node name="HurtBox" parent="." instance=ExtResource( 3 )]
visible = false
collision_layer = 8
collision_mask = 2147483649

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( 0.66893, -12.4137 )
scale = Vector2( 0.923892, 0.930199 )
shape = SubResource( 8 )

[node name="Stats" parent="." instance=ExtResource( 5 )]
maxHealth = 2

[node name="PlayerDetection" parent="." instance=ExtResource( 6 )]
visible = false

[node name="CollisionShape2D" parent="PlayerDetection" index="0"]
modulate = Color( 0, 0.462745, 1, 1 )
self_modulate = Color( 0.172549, 0.67451, 0.627451, 1 )
shape = SubResource( 9 )

[node name="HitBox" parent="." instance=ExtResource( 7 )]
visible = false
collision_mask = 4

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( 0.594601, -12.561 )
scale = Vector2( 0.82937, 0.558455 )
shape = SubResource( 10 )

[node name="SoftCollision" parent="." instance=ExtResource( 8 )]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
position = Vector2( -3.73064, 0.556812 )
shape = SubResource( 11 )

[node name="WanderController" parent="." instance=ExtResource( 9 )]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="HurtBox"]

[editable path="PlayerDetection"]

[editable path="HitBox"]

[editable path="SoftCollision"]
